overflow-fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -765,8 +765,8 @@ product section Start
  }
 
  .products .shop-now img {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     display: inline;
     margin-left: 15px;
     transition: transform 0.4s ease; /* Add transition on transform property */
